# standl

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: release.yml  tests.yml
docs/: design-schema.md  roadmap.md
examples/: design.example.yaml
examples/cnp0001543/: README.md  audit.md  design.yaml  manifest.json  provenance.json
examples/gse149689/: README.md  audit.md  design.yaml  manifest.json  provenance.json
examples/gse234903_full_chain/: README.md  audit.md  pipeline_summary.json  stangene_report.md
examples/gse234903_full_pipeline/: GSM7476348_report.json  README.md  audit.md  pipeline_summary.json
examples/gse234903_skill_demo/: README.md  audit.md  design.yaml  manifest.json  provenance.json
examples/gse96583/: README.md  audit.md  design.yaml  manifest.json  provenance.json
examples/scp1162/: README.md  audit.md  design.yaml  manifest.json  provenance.json
hooks/: hooks.json  post_standl_success.py
scripts/: demo_gse149689_rescue.py  demo_gse96583.sh  demo_stancounts_roundtrip.py  standl_stan_chain.py  standl_to_stanobj.py
skills/standl/: SKILL.md
src/standl/: __init__.py  audit.py  cli.py  fetch.py  merge.py  modes.py  schema.py
tests/: conftest.py  test_biostudies.py  test_cellxgene_api.py  test_cli.py  test_cngbdb.py  test_fetch.py  test_figshare.py  test_geo_soft.py  test_gsa_cncb.py  test_h5ad_observed.py  test_hca_dcp.py  test_merge.py  test_meta_check.py  test_run.py  test_schema.py  test_sciencedb_cn.py  test_scp_broad.py  test_validate.py  test_zenodo.py
(+17 files in other folders)
