[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "standl"
version = "0.1.0"
description = "Download single-cell datasets and extract experimental design from papers, with cross-validation"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "Sijie Chen"}]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.28",
    "tqdm>=4.65",
]

[project.optional-dependencies]
# Used by validate / meta-check when a processed h5ad is passed.
h5ad = ["anndata>=0.10"]
test = ["pytest>=7.0", "anndata>=0.10"]

[project.scripts]
standl = "standl.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/standl"]
